Added date fields to session.

--- a/features/camd_core/modules/camd_session/camd_session.features.yml
+++ b/features/camd_core/modules/camd_session/camd_session.features.yml
@@ -1,11 +1,1 @@
-name: Camd Session
-description: 'Provides Session content type and related configuration. Use this content type to propose sessions at the event.'
-type: module
-core: 8.x
-dependencies:
-  - field
-  - menu_ui
-  - node
-  - path
-  - text
-  - user
+bundle: camd
