--- a/features/camd_core/modules/camd_session/config/install/core.entity_form_display.node.session.default.yml
+++ b/features/camd_core/modules/camd_session/config/install/core.entity_form_display.node.session.default.yml
@@ -3,9 +3,12 @@ status: true
 dependencies:
   config:
     - field.field.node.session.body
+    - field.field.node.session.field_end_date
     - field.field.node.session.field_speakers
+    - field.field.node.session.field_start_date
     - node.type.session
   module:
+    - datetime
     - path
     - text
 id: node.session.default
@@ -15,7 +18,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -24,12 +27,18 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_end_date:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_speakers:
-    weight: 32
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
@@ -37,9 +46,15 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_start_date:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   path:
     type: path
-    weight: 30
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -47,19 +62,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 7
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 8
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
