--- a/features/camd_core/modules/camd_session/config/install/field.field.node.session.body.yml
+++ b/features/camd_core/modules/camd_session/config/install/field.field.node.session.body.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: session
 label: Description
 description: ''
-required: false
+required: true
 translatable: true
 default_value:
   -
@@ -21,5 +21,5 @@ default_value:
     format: basic_html
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
 field_type: text_with_summary
