--- a/features/camd_core/modules/camd_session/config/install/core.entity_view_display.node.session.default.yml
+++ b/features/camd_core/modules/camd_session/config/install/core.entity_view_display.node.session.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.session.field_end_date
     - field.field.node.session.field_speakers
     - field.field.node.session.field_start_date
+    - field.field.node.session.field_track
     - node.type.session
   module:
     - datetime
@@ -48,6 +49,14 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_track:
+    weight: 105
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   links:
     weight: 100
