--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,50 @@
     "name": "paralleldevs/camd",
     "description": "Drupal 8 distribution for Conferences",
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "type": "drupal-profile",
-    "require": {
-        "drupal/core": "~8.3.1"
-    },
+
     "license": "GPL-2.0+",
     "authors": [
         {
             "name": "Daniel Noyola",
             "email": "danielnv18@gmail.com"
         }
-    ]
+    ],
+    "require": {
+        "composer/installers": "^1.3",
+        "cweagans/composer-patches": "^1.6",
+        "drupal-composer/drupal-scaffold": "^2.3",
+        "drupal/core": "~8.3.1",
+        "drupal/workbench_moderation": "^1.2"
+    },
+    "config": {
+        "bin-dir": "bin/",
+        "sort-packages": true
+    },
+    "conflict": {
+        "drupal/drupal": "*"
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        }
+    ],
+    "scripts": {
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
+    },
+    "extra": {
+        "installer-paths": {
+            "web/core": [
+                "type:drupal-core"
+            ],
+            "web/libraries/{$name}": [
+                "type:drupal-library"
+            ],
+            "modules/contrib/{$name}": [
+                "type:drupal-module"
+            ]
+        }
+    }
 }
