--- a/modules/features/camd_session/config/install/field.storage.node.field_start_date.yml
+++ b/modules/features/camd_session/config/install/field.storage.node.field_start_date.yml
@@ -3,7 +3,11 @@ status: true
 dependencies:
   module:
     - datetime
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: custom
 id: node.field_start_date
 field_name: field_start_date
 entity_type: node
