--- a/modules/features/camd_session/config/install/node.type.session.yml
+++ b/modules/features/camd_session/config/install/node.type.session.yml
@@ -3,11 +3,20 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - workbench_moderation
 third_party_settings:
   menu_ui:
     available_menus:
       - main
     parent: 'main:'
+  workbench_moderation:
+    enabled: true
+    allowed_moderation_states:
+      - accepted
+      - proposed
+      - cancelled
+      - declined
+    default_moderation_state: proposed
 name: Session
 type: session
 description: 'Use this content type to propose sessions at the event.'
