Added room field.

--- a/modules/features/camd_session/config/install/core.entity_view_display.node.session.teaser.yml
+++ b/modules/features/camd_session/config/install/core.entity_view_display.node.session.teaser.yml
@@ -28,6 +28,9 @@ content:
   links:
     weight: 100
     region: content
+  workbench_moderation_control:
+    weight: -20
+    region: content
 hidden:
   field_end_date: true
   field_speakers: true
