--- a/modules/features/camd_session/config/install/core.entity_form_display.node.session.default.yml
+++ b/modules/features/camd_session/config/install/core.entity_form_display.node.session.default.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.field.node.session.body
     - field.field.node.session.field_end_date
+    - field.field.node.session.field_room
     - field.field.node.session.field_speakers
     - field.field.node.session.field_start_date
     - field.field.node.session.field_track
@@ -12,6 +13,7 @@ dependencies:
     - datetime
     - path
     - text
+    - workbench_moderation
 id: node.session.default
 targetEntityType: node
 bundle: session
@@ -28,15 +30,21 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   field_end_date:
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_room:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_speakers:
     weight: 1
@@ -48,7 +56,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_start_date:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -61,7 +69,7 @@ content:
     region: content
   path:
     type: path
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -69,14 +77,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     region: content
     third_party_settings: {  }
   title:
@@ -89,7 +97,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
