--- a/modules/features/camd_session/config/install/core.entity_view_display.node.session.default.yml
+++ b/modules/features/camd_session/config/install/core.entity_view_display.node.session.default.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.field.node.session.body
     - field.field.node.session.field_end_date
+    - field.field.node.session.field_room
     - field.field.node.session.field_speakers
     - field.field.node.session.field_start_date
     - field.field.node.session.field_track
@@ -33,6 +34,14 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_room:
+    weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_speakers:
     weight: 102
     label: above
@@ -60,5 +69,8 @@ content:
     region: content
   links:
     weight: 100
+    region: content
+  workbench_moderation_control:
+    weight: -20
     region: content
 hidden: {  }
