Updated permissions for the reviewer.

--- a/modules/features/camd_roles/config/install/user.role.reviewer.yml
+++ b/modules/features/camd_roles/config/install/user.role.reviewer.yml
@@ -7,17 +7,22 @@ weight: 4
 is_admin: null
 permissions:
   - 'create field_end_date'
+  - 'create field_room'
   - 'create field_start_date'
   - 'edit any session content'
   - 'edit field_end_date'
+  - 'edit field_room'
   - 'edit field_start_date'
   - 'edit own field_end_date'
+  - 'edit own field_room'
   - 'edit own field_start_date'
   - 'use accept_session transition'
   - 'use cancel_session transition'
   - 'use decline_session transition'
   - 'view field_end_date'
+  - 'view field_room'
   - 'view field_start_date'
   - 'view own field_end_date'
+  - 'view own field_room'
   - 'view own field_start_date'
   - 'view session revisions'
